<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

  <TextView
     android:id="@+id/tvImageSizeLabel"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:text="@string/label_image_size"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_alignBottom="@+id/spImageSize"
     />

  <Spinner
     android:id="@+id/spImageSize"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentRight="true"
     android:layout_toRightOf="@id/tvImageSizeLabel"
     />

  <TextView
     android:id="@+id/tvImageRightsLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/label_image_rights"
     android:layout_below="@id/tvImageSizeLabel"
     android:layout_alignParentLeft="true"
     android:layout_alignBottom="@+id/spImageRights"
     />

  <Spinner
     android:id="@+id/spImageRights"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/spImageSize"
     android:layout_toRightOf="@id/tvImageRightsLabel"
     android:layout_alignLeft="@id/spImageSize"
     android:layout_alignParentRight="true"
     />

  <TextView
     android:id="@+id/tvColorLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/label_image_color"
     android:layout_below="@id/tvImageRightsLabel"
     android:layout_alignParentLeft="true"
     android:layout_alignRight="@id/tvImageSizeLabel"
     android:layout_alignBottom="@+id/spImageColor"
     />

  <Spinner
     android:id="@+id/spImageColor"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/spImageRights"
     android:layout_toRightOf="@id/tvColorLabel"
     android:layout_alignLeft="@id/spImageSize"
     android:layout_alignParentRight="true"
     />

  <TextView
     android:id="@+id/tvImageTypeLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/label_image_type"
     android:layout_below="@id/tvColorLabel"
     android:layout_alignParentLeft="true"
     android:layout_alignBottom="@+id/spImageType"
     />

  <Spinner
     android:id="@+id/spImageType"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/spImageColor"
     android:layout_toRightOf="@id/tvImageTypeLabel"
     android:layout_alignLeft="@id/spImageSize"
     android:layout_alignParentRight="true"
     />

  <TextView
     android:id="@+id/tvSiteLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/label_site"
     android:layout_below="@id/tvImageTypeLabel"
     android:layout_alignParentLeft="true"
     android:layout_alignBottom="@+id/etSite"
     />

  <EditText
     android:id="@+id/etSite"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_below="@id/spImageType"
     android:layout_toRightOf="@id/tvSiteLabel"
     android:layout_alignLeft="@id/spImageSize"
     android:layout_alignParentRight="true"
     />

  <Button
     android:id="@+id/btnSave"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/button_save"
     android:layout_below="@id/tvSiteLabel"
     android:layout_centerHorizontal="true"
     android:onClick="onSave"
     />
     
</RelativeLayout>
